Added in get all for get api to get the a list of movies

--- a/ApiCreation/ApiCreation.csproj
+++ b/ApiCreation/ApiCreation.csproj
@@ -208,14 +208,17 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\Movie.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\MovieController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201906111653312_1.cs" />
     <Compile Include="Migrations\201906111653312_1.Designer.cs">
       <DependentUpon>201906111653312_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906111735425_4.cs" />
+    <Compile Include="Migrations\201906111735425_4.Designer.cs">
+      <DependentUpon>201906111735425_4.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -319,6 +322,9 @@
     <EmbeddedResource Include="Migrations\201906111653312_1.resx">
       <DependentUpon>201906111653312_1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906111735425_4.resx">
+      <DependentUpon>201906111735425_4.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -338,7 +344,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50006</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50006/</IISUrl>
+          <IISUrl>http://localhost:5006/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
